Bug 271331 - Broken documentation with docbook-xsl 1.76
Summary: Broken documentation with docbook-xsl 1.76
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.6
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-20 06:53 UTC by Dimitrios Glentadakis
Modified: 2011-07-20 21:30 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitrios Glentadakis 2011-04-20 06:53:59 UTC
Version:           0.8 (using KDE 4.6.2) 
OS:                Linux

Since the latest update i dont have any more the "previous" and "next" buttons, to navigate through the documentation

Reproducible: Always


Actual Results:  
https://bugs.mageia.org/attachment.cgi?id=249
https://bugs.mageia.org/attachment.cgi?id=250


OS: Linux (x86_64) release 2.6.38.3-desktop-1.mga
Compiler: gcc
Comment 1 Balcaen John 2011-04-20 12:05:50 UTC
I can reproduce it too.
To be more precise it's still available for example for konsole & kwrite handbook
but not for kate,ark, all kdegames, kdepim (4.4.10) apps, rekonq etc etc.
Comment 2 Christoph Feck 2011-04-24 19:53:48 UTC
Works here on today's trunk. Checked rekonq and kpat.
Comment 3 Balcaen John 2011-05-20 14:13:40 UTC
Hum in fact it's also missing on online  handbooks
for example for jovie :
http://docs.kde.org/stable/en/kdeaccessibility/jovie/general.html 
or kate

http://docs.kde.org/stable/en/kdesdk/kate/menu-entries.html#file-menu
Comment 4 Burkhard Lück 2011-06-01 08:11:55 UTC
Checked this issue with a lot of docs with Kubuntu 10.10 (kde 4.6.2) and master/branch 4.6.3 compiled from sources, works here.

Looks like a distribution problem to me.

@ Balcaen John:
The missing "previous" and "next" buttons on docs.kde.org (a completely different issue) are back since a few days.
Comment 5 Balcaen John 2011-06-01 09:12:29 UTC
Could it be related to the docbook xsl version ?
i noticed that we have 1.76.1 on mageia, i'm able to reproduce on fedora 15 (which also provided 1.76.1) while it can't be reproduced on kubuntu 11.04 (which is using 1.75.2)
Comment 6 Pino Toscano 2011-06-05 21:44:51 UTC
Yes, we currently don't support docbook-xsl 1.76.
(CC'ing Luigi)
Comment 7 Luigi Toscano 2011-06-29 23:52:27 UTC
Git commit dd11f66a38a20c4fe9421c70784da05be85e111c by Luigi Toscano.
Committed on 20/06/2011 at 05:56.
Pushed by ltoscano into branch 'KDE/4.7'.

local.l10n.xml: load the correct file, adapt the configuration

Previously, local.l10n.xml was defined to use a build-time generated
file containing the a list of languages for which we provides
customizations (see kdoctools/customization/xsl). It seems that this
is not the intended way for customization to work; it used to work by
accident for docbook-xsl<=1.75 but the new optimized l10n structure
introduced with docbook-xsl>=1.76 broke it (see:
http://lists.oasis-open.org/archives/docbook-apps/201009/msg00143.html )

The idea now is to directly load the correct customization file for
the required language.

WARNING: in order to make this change working (especially the
changes to kdoctools/customization/kde-include-common.xsl.cmake)
few changes have been performed to the files under
kdoctools/customization/xsl. For each of them:
- the <?xml ... ?> header was removed
- the opening tag like:
  <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="en" english-language-name="English">
  was changed as follow:
  <l:i18n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0">
  <l:l10n language="en" english-language-name="English">
- the corresponding closing tag for <l:i18n> was added at the end of
  the file.

REVIEW:101791
CCBUG: 271331
CCMAIL: kde-docbook@kde.org
CCMAIL: kde-i18n-doc@kde.org

M  +1    -3    kdoctools/CMakeLists.txt     
M  +1    -2    kdoctools/customization/kde-include-common.xsl.cmake     
M  +0    -1    kdoctools/customization/kde-include-man.xsl.cmake     
M  +3    -2    kdoctools/customization/xsl/ca.xml     
M  +3    -2    kdoctools/customization/xsl/de.xml     
M  +3    -2    kdoctools/customization/xsl/el.xml     
M  +3    -2    kdoctools/customization/xsl/en.xml     
M  +3    -2    kdoctools/customization/xsl/es.xml     
M  +3    -2    kdoctools/customization/xsl/et.xml     
M  +3    -2    kdoctools/customization/xsl/fr.xml     
M  +3    -2    kdoctools/customization/xsl/gl.xml     
M  +3    -2    kdoctools/customization/xsl/it.xml     
M  +3    -2    kdoctools/customization/xsl/lt.xml     
M  +3    -2    kdoctools/customization/xsl/nl.xml     
M  +3    -2    kdoctools/customization/xsl/nn.xml     
M  +3    -2    kdoctools/customization/xsl/pl.xml     
M  +3    -2    kdoctools/customization/xsl/pt.xml     
M  +3    -2    kdoctools/customization/xsl/pt_br.xml     
M  +3    -2    kdoctools/customization/xsl/ru.xml     
M  +3    -2    kdoctools/customization/xsl/sl.xml     
M  +3    -3    kdoctools/customization/xsl/sr.xml     
M  +3    -2    kdoctools/customization/xsl/sv.xml     
M  +3    -2    kdoctools/customization/xsl/tr.xml     
M  +3    -2    kdoctools/customization/xsl/uk.xml     
M  +0    -4    kdoctools/docbookl10nhelper.cpp     

http://commits.kde.org/kdelibs/dd11f66a38a20c4fe9421c70784da05be85e111c
Comment 8 Burkhard Lück 2011-07-20 19:54:36 UTC
(In reply to comment #7)
> Git commit dd11f66a38a20c4fe9421c70784da05be85e111c by Luigi Toscano.
> Committed on 20/06/2011 at 05:56.
> Pushed by ltoscano into branch 'KDE/4.7'.
> 
Any reason why this was not committed to master and close this bug?
Comment 9 Luigi Toscano 2011-07-20 20:08:15 UTC
(In reply to comment #8)
> (In reply to comment #7)
> > Git commit dd11f66a38a20c4fe9421c70784da05be85e111c by Luigi Toscano.
> > Committed on 20/06/2011 at 05:56.
> > Pushed by ltoscano into branch 'KDE/4.7'.
> > 
> Any reason why this was not committed to master and close this bug?

Because I was not sure about the commit policy for kdelibs. I was under the impression that bugfixes should have been committed to KDE/4.7 and than that branch would have been merged (by someone) to master, but it seems that people are cherry-picking the commits, so I'll probably follow this route.
Comment 10 Burkhard Lück 2011-07-20 20:19:18 UTC
(In reply to comment #9)
> 
> Because I was not sure about the commit policy for kdelibs. I was under the
> impression that bugfixes should have been committed to KDE/4.7 and than that
> branch would have been merged (by someone) to master, but it seems that people
> are cherry-picking the commits, so I'll probably follow this route.

Yes, please cherry-pick, thanks.
Comment 11 Luigi Toscano 2011-07-20 21:30:34 UTC
Git commit 2094fbbcb8dea70279252979bad982530aab9088 by Luigi Toscano.
Committed on 20/06/2011 at 05:56.
Pushed by ltoscano into branch 'master'.

local.l10n.xml: load the correct file, adapt the configuration

Previously, local.l10n.xml was defined to use a build-time generated
file containing the a list of languages for which we provides
customizations (see kdoctools/customization/xsl). It seems that this
is not the intended way for customization to work; it used to work by
accident for docbook-xsl<=1.75 but the new optimized l10n structure
introduced with docbook-xsl>=1.76 broke it (see:
http://lists.oasis-open.org/archives/docbook-apps/201009/msg00143.html )

The idea now is to directly load the correct customization file for
the required language.

WARNING: in order to make this change working (especially the
changes to kdoctools/customization/kde-include-common.xsl.cmake)
few changes have been performed to the files under
kdoctools/customization/xsl. For each of them:
- the <?xml ... ?> header was removed
- the opening tag like:
  <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="en" english-language-name="English">
  was changed as follow:
  <l:i18n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0">
  <l:l10n language="en" english-language-name="English">
- the corresponding closing tag for <l:i18n> was added at the end of
  the file.

REVIEW:101791
BUG: 271331
CCMAIL: kde-docbook@kde.org
CCMAIL: kde-i18n-doc@kde.org
(cherry picked from commit dd11f66a38a20c4fe9421c70784da05be85e111c)

M  +3    -2    kdoctools/customization/xsl/gl.xml
M  +3    -2    kdoctools/customization/xsl/en.xml
M  +3    -2    kdoctools/customization/xsl/sv.xml
M  +1    -2    kdoctools/customization/kde-include-common.xsl.cmake
M  +3    -2    kdoctools/customization/xsl/es.xml
M  +0    -4    kdoctools/docbookl10nhelper.cpp
M  +3    -2    kdoctools/customization/xsl/sl.xml
M  +3    -2    kdoctools/customization/xsl/uk.xml
M  +3    -2    kdoctools/customization/xsl/pl.xml
M  +3    -2    kdoctools/customization/xsl/it.xml
M  +3    -2    kdoctools/customization/xsl/lt.xml
M  +3    -2    kdoctools/customization/xsl/el.xml
M  +3    -3    kdoctools/customization/xsl/sr.xml
M  +0    -1    kdoctools/customization/kde-include-man.xsl.cmake
M  +3    -2    kdoctools/customization/xsl/fr.xml
M  +3    -2    kdoctools/customization/xsl/ru.xml
M  +3    -2    kdoctools/customization/xsl/nl.xml
M  +3    -2    kdoctools/customization/xsl/de.xml
M  +3    -2    kdoctools/customization/xsl/pt_br.xml
M  +3    -2    kdoctools/customization/xsl/et.xml
M  +3    -2    kdoctools/customization/xsl/tr.xml
M  +3    -2    kdoctools/customization/xsl/nn.xml
M  +3    -2    kdoctools/customization/xsl/ca.xml
M  +3    -2    kdoctools/customization/xsl/pt.xml
M  +1    -3    kdoctools/CMakeLists.txt

http://commits.kde.org/kdelibs/2094fbbcb8dea70279252979bad982530aab9088